# infrastructure/src/main/java/com/itxiop/transport/infrastructure/apirest/controller/ShipmentsApiController.java
@@ -8,6 +8,8 @@ import com.itxiop.transport.infrastructure.apirest.mapper.RestShipmentMapper;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
@@ -38,17 +40,28 @@ public class ShipmentsApiController implements ShipmentsApi {
   private RestShipmentMapper shipmentMapper;
 
   @Override
-  public ResponseEntity<Object> getShipment(/* TODO #2: UUID shipmentId*/) {
+  public ResponseEntity<Object> getShipment() {
     UUID shipmentId = null;
     Shipment domainShipment = findShipmentUseCase.findShipmentById(shipmentId);
-    Object shipment = null; // TODO #2: MAP DOMAIN TO API SHIPMENT
+    Object shipment = null; 
     return ResponseEntity.ok(shipment);
   }
+  
+  @GetMapping("/shipment/{shipmentId}")
+  public ResponseEntity<Object> getShipment(  @PathVariable UUID shipmentId) {
+    
+	Shipment shipment = findShipmentUseCase.findShipmentById(shipmentId);
+   
+    return ResponseEntity.ok(shipment);
+  }
+  @GetMapping("/shipments")
+  public ResponseEntity<List<Shipment>> getShipments() {
+      List<Shipment> shipments = findShipmentsUseCase.findShipments();
 
-  public ResponseEntity<List<Object>> getShipments() {
-    List<Shipment> domainShipments = findShipmentsUseCase.findShipments();
-    List<Object> shipments = null; // TODO #2: MAP DOMAIN TO API SHIPMENTS
-    return ResponseEntity.ok(shipments);
+      if (shipments.isEmpty()) {
+          return ResponseEntity.noContent().build();
+      }
+      return ResponseEntity.ok(shipments);
   }
 
   @PostMapping("/shipments")
